--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esbuild-inline-sass",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "The missing inline SASS/SCSS loader for esbuild.",
   "repository": "ProdigyPXP/esbuild-inline-sass",
   "main": "index.js",
@@ -11,8 +11,8 @@
     "index.js.map"
   ],
   "scripts": {
-    "build": "esbuild --bundle --external:esbuild --platform=node --outfile=index.js --minify --sourcemap --sources-content=false --target=node12 index.ts",
-    "test": "npm run build && cd test && node build.js"
+    "build": "esbuild --bundle --external:esbuild --platform=node --outfile=index.js --minify --sourcemap --sources-content=false --target=node16 index.ts",
+    "test": "pnpm build && cd test && node build.js"
   },
   "keywords": [
     "esbuild",
@@ -34,11 +34,11 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^20.2.1",
-    "esbuild": "^0.18.13",
+    "@types/node": "^20.4.2",
+    "esbuild": "^0.18.15",
     "sanitize.css": "^13.0.0"
   },
   "dependencies": {
-    "esbuild-sass-plugin": "^2.9.0"
+    "esbuild-sass-plugin": "^2.10.0"
   }
 }
